--- a/course.html
+++ b/course.html
@@ -24,12 +24,12 @@
     <div class="wrapper">
       <header>
         <nav>
-          <a href="Home.html" id="logo">ABC</a>
+          <a href="index.html" id="logo">ABC</a>
           
           <i class="fas fa-bars" id="ham-menu"></i>
           <ul id="nav-bar">
             <li>
-              <a href="Home.html">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li>
               <a href="course.html">Course</a>
@@ -190,7 +190,7 @@
 
 
       <footer class="footer">
-        <a href="Home.html" id="logo">ABC</a>
+        <a href="index.html" id="logo">ABC</a>
 
         <div class="footer-links">
           <ul>
