--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <button type="submit">Submit</button>
               </form>
             </div>
-            <img class= "home-img1"src="img/Home-img1.png" alt="Home-img1">
+            <img class= "home-img1"src="img/Home.png" alt="Home-img1">
           </div>
   
         </section>
