jQuery Toggle adding

--- a/course1.html
+++ b/course1.html
@@ -68,7 +68,10 @@
       </main>
 
 
+
       
+<!--Footer Code --> 
+
 <footer class="footer">
   <a href="index.html" id="logo">ABC</a>
 
@@ -112,6 +115,7 @@
       </ul>
       
     </div>
+
   <div class="footer-icons-text">
     <h3>Subscribe us</h3>
 
