jQuery Toggle Changes

--- a/course1.html
+++ b/course1.html
@@ -58,7 +58,8 @@
                 </q>
              </div>
              <div class="content2">
-              <h2>Learning outcomes</h2>
+
+              <button><h2>Learning outcomes</h2></button>
               <q>The course outcomes include the ability to write Java programs, an understanding of object-oriented programming, and proficiency in using the Java Development Kit (JDK).</q>
               <img src="Img/img3.jpg" alt="">
              </div>
@@ -69,7 +70,7 @@
 
 
 
-      
+
 <!--Footer Code --> 
 
 <footer class="footer">
@@ -144,6 +145,14 @@
     </div>
 
     <!-- Script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $("button").click(function(){
+          $(".content2 q").slideToggle();
+        });
+      });
+      </script>
     <script src="script.js"></script>
   </body>
 </html>
