--- a/course6.html
+++ b/course6.html
@@ -59,7 +59,7 @@
                 </q>
              </div>
              <div class="content2">
-              <h2>Learning outcomes</h2>
+              <button><h2>Learning outcomes</h2></button>
               <q>The course outcomes include proficiency in using Python for data science and an understanding of data analysis concepts.</q>
               <img src="Img/img9.jpg" alt="">
              </div>
@@ -141,6 +141,16 @@
     </div>
 
     <!-- Script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $("button").click(function(){
+          $(".content2 q").slideToggle();
+        });
+      });
+      </script>
+
+
     <script src="script.js"></script>
   </body>
 </html>
