--- a/course3.html
+++ b/course3.html
@@ -58,7 +58,7 @@
                 </q>
              </div>
              <div class="content2">
-              <h2>Learning outcomes</h2>
+              <button><h2>Learning outcomes</h2></button>
               <q>The course outcomes include proficiency in using Microsoft Office applications for personal and professional use.</q>
               <img src="Img/img6.jpg" alt="img6">
              </div>
@@ -140,6 +140,15 @@
     </div>
 
     <!-- Script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $("button").click(function(){
+          $(".content2 q").slideToggle();
+        });
+      });
+      </script>
+
     <script src="script.js"></script>
   </body>
 </html>
